# HDDA-Recommendation-systems

./: .gitignore  README.md  requirements.in  requirements.txt
data/: .gitignore  sol_all_mean.csv
data/csv/: movies.tsv  movies_proc.csv  ratings_test_eval.csv  ratings_test_eval_known_i_ids.csv  ratings_test_eval_unknown_i_ids.csv  readme.md  simple_user_movie_ratings.csv  users.tsv  users_proc.csv
notebooks/: check_train_test.ipynb  experiment_with_features.ipynb  explore_dat_files.ipynb  make_plots.ipynb  prepare_features.ipynb  simple_data_example.ipynb
report/: report copy 2.md  report copy.md  report.md
src/: main.py  pyproject.toml  setup.py  test.py
src/recommendex/: __init__.py
src/recommendex/svd_models/: __init__.py  svd_model.py
src/recommendex/svd_models/improved_model/: improved_model.py
src/recommendex/svd_models/simple_model/: simple_model.py
src/svd_models/: __init__.py  jax_utils.py  svd_model.py
src/svd_models/experimental_model/: experimental_model.py
src/svd_models/improved_model/: improved_model.py  jax_solver.py
src/svd_models/simple_model/: __init__.py  jax_solver.py  simple_model.py
src/tests/: grad_with_fixed_params.py  multi_linear_reg.py
