[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommendex"
version = "0.1.0"
description = "JAX implementation of Funk SVD using SGD and BCD."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "Ahmadsho Akdodshoev", email = "akdodshoev@gmail.com" }]
dependencies = [
    "absl-py==2.1.0",
    "chex==0.1.89",
    "etils[epath,epy]==1.12.2",
    "flax==0.10.4",
    "fsspec==2025.3.0",
    "humanize==4.12.1",
    "importlib-resources==6.5.2",
    "jax==0.4.35",
    "jaxlib==0.4.35",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "msgpack==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "opt-einsum==3.4.0",
    "optax==0.2.4",
    "orbax-checkpoint==0.11.5",
    "pandas==2.2.3",
    "protobuf==6.30.0",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "scipy==1.14.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "tensorstore==0.1.72",
    "toolz==1.0.0",
    "treescope==0.1.9",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "zipp==3.21.0",
]

[project.urls]
Homepage = "https://github.com/simply-pleb/HDDA-Recommendation-systems"

# [project.classifiers]
# Programming_Language = "Python :: 3"
# License = "OSI Approved :: MIT License"
# Operating_System = "OS Independent"
